# FuelAnchor

./: .env.example  .gitignore  ARCHITECTURE.md  COMMANDS.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  SETUP_GUIDE.md  SUPABASE_SETUP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  package.json
backend/src/: index.ts
backend/src/api/: auth.ts  credit.ts  driver.ts  fleet.ts  station.ts  stellar.ts  transaction.ts  webhooks.ts
backend/src/config/: environment.ts
backend/src/middleware/: auth.ts  errorHandler.ts
backend/src/services/: stellar.ts
backend/src/utils/: logger.ts
contracts/credit-score/: Cargo.toml
contracts/credit-score/src/: lib.rs
contracts/fuel-lock/: Cargo.toml  README.md
contracts/fuel-lock/src/: lib.rs
contracts/fuel-token/: Cargo.toml
contracts/fuel-token/src/: admin.rs  allowance.rs  balance.rs  contract.rs  lib.rs  metadata.rs  storage_types.rs  test.rs
contracts/geofencing/: Cargo.toml
contracts/geofencing/src/: lib.rs
contracts/voucher-redemption/: Cargo.toml
contracts/voucher-redemption/src/: lib.rs
frontend/: App.tsx  app.json  package.json
frontend/src/hooks/: useAuth.tsx  useTheme.tsx
frontend/src/navigation/: RootNavigator.tsx
frontend/src/screens/: CreditScreen.tsx  (+7 more)
frontend_flutter/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
frontend_flutter/lib/: main.dart
frontend_flutter/test/: widget_test.dart
frontend_flutter/web/: index.html  manifest.json
frontend_flutter/windows/: CMakeLists.txt
supabase/migrations/: 20260207_initial_schema.sql
(+42 files in other folders)
