[workspace]
resolver = "2"

members = [
    "contracts/fuel-token",
    "contracts/voucher-redemption",
    "contracts/credit-score",
    "contracts/geofencing",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
